[tool.poetry]
name = "cauldroncartel"
version = "0.1.0"
description = ""
authors = ["AmeerArsala <ameer.arsala03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.88.0"
pytest = "7.1.3"
uvicorn = "0.20.0"
sqlalchemy = "2.0.7"
psycopg2-binary = ">=2.9.3,<2.10.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
